<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">


	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="@color/white"
		android:orientation="vertical" >

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingLeft="30dp"
				android:paddingRight="30dp"
				android:paddingTop="30dp"
				android:orientation="vertical">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@mipmap/ic_launcher"
					android:layout_gravity="center_horizontal"
					android:layout_marginTop="10dp"
					android:contentDescription="@string/home"/>


				<Button android:id="@+id/exitButton"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_marginTop="10dp"
					android:paddingTop="6dp"
					android:paddingBottom="6dp"
					android:paddingLeft="12dp"
					android:paddingRight="12dp"
					android:onClick="exitGame"
					android:text="@string/exit"
					android:textColor="@color/colorPrimary"
					android:textAppearance="@android:style/TextAppearance.Large"
					android:fontFamily="@string/font_family">
				</Button>

			</LinearLayout>
		</ScrollView>
	</LinearLayout>
</FrameLayout>